# phys-classroom-grading

./: .gitignore  .pre-commit-config.yaml  README.md  assignments.toml  final_grades_config.toml  pyproject.toml
src/phys_classroom_grading/: assignments.toml  cli.py  final_grades.py  final_grades_config.toml  io.py  tool.py
